# avionics-warranty-maintenance-system

./: .gitignore  AircraftData_8h.html  Aircraft_8h.html  BaseState_8h.html  CMakeLists.txt  CliInterface_8h.html  Crc32_8h.html  DiagnosticState_8h.html  FaultState_8h.html  MaintenanceState_8h.html  Packet_8h.html  README.md  README_8md.html  StandbyState_8h.html  StateManager_8h.html  TcpConnection_8h.html  WarrantyData_8h.html  WarrantyManager_8h.html  about.html  about_8dox.html  annotated.html  build.bat  build.sh  classaircraft_1_1Aircraft.html  classaircraft_1_1BaseState.html  classaircraft_1_1CliInterface.html  classaircraft_1_1DiagnosticState.html  classaircraft_1_1FaultState.html  classaircraft_1_1MaintenanceState.html  classaircraft_1_1StandbyState.html  classaircraft_1_1StateManager.html  classmma_1_1MMA.html  classmma_1_1WarrantyManager.html  classnetwork_1_1Crc32.html  classnetwork_1_1TcpConnection.html  codecov.yaml  dir_0966d06610f72609fd9aa4979c2b5a92.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_98750238662905b252d939eb8e7c379d.html  (+37 more)
.github/: CODEOWNERS
.github/workflows/: documentation.yaml  install.yml  macos.yml  pvs-studio.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
System Volume Information/: IndexerVolumeGuid
all/: CMakeLists.txt
documentation/: CMakeLists.txt  conf.py
documentation/pages/: about.dox
include/aircraft/: Aircraft.h  AircraftData.h  BaseState.h  CliInterface.h  DiagnosticState.h  FaultState.h  MaintenanceState.h  StandbyState.h  StateManager.h  aircraft.h
include/common/: Crc32.h  Packet.h  TcpConnection.h  WarrantyData.h
include/greeter/: greeter.h
include/mma/: WarrantyManager.h  mma.h
res/recv/: aircraft_12345_image_9001.raw
source/: aircraft_main.cpp  greeter.cpp  mma.cpp  mma_main.cpp
source/aircraft/: Aircraft.cpp  CliInterface.cpp  DiagnosticState.cpp  FaultState.cpp  MaintenanceState.cpp  StandbyState.cpp  StateManager.cpp  aircraft.cpp  aircraft_main.cpp
source/common/: Crc32.cpp  Packet.cpp
source/mma/: WarrantyManager.cpp  mma.cpp  mma_main.cpp
standalone/source/: main.cpp
test/: CMakeLists.txt
test/include/helpers/: MockAircraft.h  MockMMA.h  TestHelpers.h
test/source/: greeter.cpp
test/source/aircraft/: AircraftIntegrationTests.cpp  AircraftUnitTests.cpp  CliInterfaceUnitTests.cpp  CliInterfaceUsabilityTests.cpp  StateManagerUnitTests.cpp
test/source/common/: NetworkIntegrationTests.cpp  PacketUnitTests.cpp  SystemTests.cpp
test/source/helpers/: MockAircraft.cpp  MockMMA.cpp  TestHelpers.cpp
test/source/mma/: MMAIntegrationTests.cpp  MMAUnitTests.cpp  MMAUsabilityTests.cpp
